# qr-code-scanner

./: pyproject.toml
src/qr_code_scanner/: __main__.py
